--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section>
         <nav>
-            <img src="./pics/FES.svg" alt="">
+            <img src="./pics/FES.svg" class='logo' alt="">
             <ul>
             
                 <li><a href="#about>"> About</a> </li>
@@ -19,25 +19,33 @@
             </ul>
         </nav>
         <header>
+            <div class="row">
+
+            
             <div>
                 <h1> Best place to learn Frontend</h1>
-                <p>Go from being an absolute beginner to a pro with a simplified process</p>
+                <p class="subheader"> Go from being an absolute beginner to a pro with a simplified process</p>
                 <button>Start now</button>
             </div>
             <figure>
                 <img src="./pics/laptop.png" alt="Home page image">
             </figure>
+        </div>
         </header>
     </section>
     <main>
       <section id="about"></section>
         <h2>About</h2>
+        <div class="section__description"> 
         <div>
             Keep in mind - memorising every tag is absolutely unnecessary, so having the cheat sheet available will come in handy. Feel free to Google or ask the Discord server if you have any questions.
         </div>
-        <figure>
+        <figure class="about__img--wrapper">
             <img src="./pics/about.jpg" alt="">
+        </div>
         </figure>
+
+
       <section id="discord"></section> 
         <h2>Discord</h2>
         <figure>
